fixed index photo overlapping navbar

--- a/index.css
+++ b/index.css
@@ -1,1 +1,7 @@
-body(overflow-y: none;) 
+body {
+    overflow-y: none;
+}
+
+#home {
+    padding-top: 1.25rem;
+}
